# SentientAI

./: .gitignore  .pre-commit-config.yaml  AGENTS.MD  README.md  about.md  arc
.github/workflows/: ci.yml
docs/: AGENTS.md  tray_ipc_summary.md
engine/: pyproject.toml
engine/llm/: summariser.py
engine/memory/: alembic.ini  graph.py  model.py  vector_store.py
engine/memory/migrations/: env.py
engine/memory/migrations/versions/: 0001_create_core_tables.py
engine/tests/: test_memory.py  test_summariser.py
ingestion/: pyproject.toml
ingestion/calendar/: plugin.py
ingestion/calendar/tests/: test_plugin.py
ops/: notarize.sh
privacy/: pyproject.toml
shell/: README.md  forge.config.js  generate_icon.py  index.html  main.js  package.json  preload.js
shell/scripts/: generate-icon.js
