[tool.poetry]
name = "sentient-engine"
version = "0.1.0"
description = "Backend engine for Sentient"
authors = ["Sentient Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
