[tool.poetry]
name = "sentient-engine"
version = "0.1.0"
description = "Backend engine for Sentient"
authors = ["Sentient Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0"
alembic = "^1.12"
qdrant-client = "^1.7"
pytest = "^7.4"
pytest-benchmark = "^4.0"
pytest-cov = "^4.0"

[tool.poetry.group.main]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"