[tool.poetry]
name = "sentient-ingestion"
version = "0.1.0"
description = "Plugin ingestion framework"
authors = ["Sentient Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
vcrpy = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
