[tool.poetry]
name = "sentient-privacy"
version = "0.1.0"
description = "Privacy and security tools"
authors = ["Sentient Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
